# statcppCLI

./: .gitignore  CMakeLists.txt  LICENSE  README-ja.md  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
build-test/: statcppcli_test  statcppcli_test[1]_include.cmake  statcppcli_test[1]_tests.cmake
cmake/: gflags.cmake  nlohmann-json.cmake  statcpp.cmake  statcppCmake-jp.md  statcppCmake.md
docs/: CHANGELOG.md  commands-ja.md  commands.md  design-ja.md  design.md  index.md  output.txt  run_reference.sh  test-reference-ja.md  test-reference.md
src/: main.cpp
src/include/: cli_parser.hpp  csv_reader.hpp  output_formatter.hpp
src/include/commands/: anova.hpp  ci.hpp  cluster.hpp  corr.hpp  desc.hpp  effect.hpp  glm_cmd.hpp  model.hpp  multiple.hpp  power.hpp  reg.hpp  resample.hpp  robust.hpp  survival.hpp  test_cmd.hpp  ts.hpp
test/: CMakeLists.txt  test_cli_parser.cpp  test_csv_reader.cpp  test_output_formatter.cpp
test/e2e/: run_e2e.sh
test/e2e/data/: basic.csv  binary.csv  contingency.csv  count.csv  forecast.csv  missing.csv  pvalues.csv  quoted.csv  scores.csv  survival.csv  survival_two.csv  two_groups.csv
test/e2e/golden/: anova_oneway.json  anova_oneway.txt  ci_mean.json  ci_mean.txt  ci_prop.json  ci_sample_size.json  ci_sample_size.txt  corr_pearson.json  corr_pearson.txt  desc_five_number.txt  desc_mean_na.txt  desc_quartiles.txt  desc_summary.json  desc_summary.txt  effect_cohens_d.json  effect_cohens_d.txt  effect_cohens_h.json  multiple_bh.txt  multiple_bonferroni.json  multiple_bonferroni.txt  noheader_mean.txt  power_prop.txt  power_t_one.json  power_t_one.txt  power_t_one_samplesize.txt  power_t_two.txt  quoted_mean.txt  reg_simple.json  reg_simple.txt  reg_vif.txt  robust_hodges_lehmann.txt  robust_mad.json  robust_mad.txt  robust_outliers.txt  row_comma_mean.json  row_comma_mean.txt  shortcut_mean.txt  survival_km.json  survival_km.txt  survival_na.txt  (+6 more)
